# src/codegen/model/addMessageReactionRequest.ts
@@ -1,0 +1,38 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+import { Text } from './text';
+
+export class AddMessageReactionRequest {
+    'messageId'?: number;
+    'reaction'?: Text;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "messageId",
+            "baseName": "message_id",
+            "type": "number"
+        },
+        {
+            "name": "reaction",
+            "baseName": "reaction",
+            "type": "Text"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return AddMessageReactionRequest.attributeTypeMap;
+    }
+}
+
